Change primitive constructor calls to more modern equivalents.
These constructors are [deprecated for removal](https://bugs.openjdk.org/browse/JDK-8254324).

This closes #44